--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,43 +9,29 @@ on:
       - main
 
 jobs:
-  build:
+  build-test-lint-format:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+      - name: Install dependencies
+        run: yarn install
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
+      - name: Build the project
+        run: yarn build
 
-      - name: Set up Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
+      - name: Run tests
+        run: yarn test
 
-      - name: Build and run services with Docker Compose
-        run: docker-compose up -d --build
+      - name: Run formatter check
+        run: yarn format
 
-      - name: Run Prettier
-        run: docker-compose run --rm frontend yarn format
-        continue-on-error: true
-
-      - name: Run ESLint
-        run: docker-compose run --rm frontend yarn lint
-        continue-on-error: true
-
-      - name: Build React App
-        run: docker-compose run --rm frontend yarn build
-
-      - name: Run Tests
-        run: docker-compose run --rm frontend yarn test --watchAll=false
-
-      - name: Shut down services
-        run: docker-compose down
+      - name: Run linter
+        run: yarn lint
