--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,7 +46,5 @@ jobs:
             if [ $(docker ps -a -q -f name=my-react-app) ]; then
               docker rm my-react-app
             fi
-            if [ $(lsof -t -i:80) ]; then
-              kill -9 $(lsof -t -i:80)
-            fi
+            fuser -k 80/tcp || true
             docker run -d --name my-react-app -p 80:80 ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
