--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,14 +1,14 @@
-# .github/workflows/cd.yml
-name: CD
+name: CI/CD
 
 on:
   push:
     branches:
+      - dev
       - prod
       - release
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,12 +25,17 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
-          platforms: linux/amd64,linux/arm64
+        run: |
+          docker buildx create --use
+          docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest --push .
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.5
@@ -39,12 +44,7 @@ jobs:
           username: ${{ secrets.AWS_EC2_USER }}
           key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
-            if [ $(docker ps -q -f name=my-react-app) ]; then
-              docker stop my-react-app
-            fi
-            if [ $(docker ps -a -q -f name=my-react-app) ]; then
-              docker rm my-react-app
-            fi
-            fuser -k 80/tcp || true
-            docker run -d --name my-react-app -p 80:80 ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
+            cd /path/to/your/docker-compose
+            docker-compose pull frontend
+            docker-compose down
+            docker-compose up -d
