--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3.8'
+
 services:
   frontend:
-    build:
-      context: .
-      dockerfile: dockerfile
+    image: myjjue/my-react-app:latest
     ports:
       - '80:80'
