--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,6 +37,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Copy docker-compose.yml to EC2
+        uses: appleboy/scp-action@v0.1.0
+        with:
+          source: 'docker-compose.yml'
+          target: ${{ secrets.AWS_EC2_USER }}@${{ secrets.AWS_EC2_HOST }}:/home/ubuntu/frontend/docker-compose.yml
+          key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.5
         with:
@@ -44,6 +51,7 @@ jobs:
           username: ${{ secrets.AWS_EC2_USER }}
           key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
           script: |
+            cd /home/ubuntu/frontend
             docker-compose pull frontend
             docker-compose down
             docker-compose up -d
