--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,8 +41,9 @@ jobs:
         uses: appleboy/scp-action@v0.1.0
         with:
           source: 'docker-compose.yml'
-          target: ${{ secrets.AWS_EC2_USER }}@${{ secrets.AWS_EC2_HOST }}:/home/ubuntu/frontend/docker-compose.yml
+          target: ${{ secrets.AWS_EC2_USER }}@${{ secrets.AWS_EC2_HOST }}:/home/ubuntu/docker-compose.yml
           key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
+          port: 22
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.5
@@ -51,7 +52,7 @@ jobs:
           username: ${{ secrets.AWS_EC2_USER }}
           key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
           script: |
-            cd /home/ubuntu/frontend
+            cd /home/ubuntu
             docker-compose pull frontend
             docker-compose down
             docker-compose up -d
