--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
       - release
 
 jobs:
-  build:
+  build_and_push:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,16 +26,13 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest --push .
+          docker buildx build --platform linux/amd64 -f Dockerfile.dev -t ${{ secrets.DOCKER_USERNAME }}/til-front:latest --push .
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build_and_push
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.5
         with:
@@ -43,7 +40,7 @@ jobs:
           username: ${{ secrets.AWS_EC2_USER }}
           key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
           script: |
-            cd /home/ubuntu
-            docker-compose pull frontend
+            cd /home/ubuntu/frontend
+            docker-compose pull
             docker-compose down
             docker-compose up -d
