--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,11 +1,8 @@
-# .github/workflows/cd.yml
-name: CD
+name: '[CD] Deploy to Dev Server'
 
 on:
   push:
-    branches:
-      - prod
-      - release
+    branches: [dev]
 
 jobs:
   deploy:
@@ -15,31 +12,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+          
+      - name: Build project
+        run: |
+          yarn install
+          yarn build
+      - name: Sync S3 bucket
+        run: aws s3 sync ./build s3://${{ secrets.S3_BUCKET_NAME }} --delete
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
-          platforms: linux/amd64,linux/arm64
-
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.5
-        with:
-          host: ${{ secrets.AWS_EC2_HOST }}
-          username: ${{ secrets.AWS_EC2_USER }}
-          key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
-          script: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
-            docker stop my-react-app || true
-            docker rm my-react-app || true
-            docker run -d --name my-react-app -p 80:80 ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
+      - name: Invalidate CloudFront cache
+        run: |
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
